apps/monitoring/peanut/peanut-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peanut
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peanut
  template:
    metadata:
      labels:
        app: peanut
    spec:
      containers:
        - name: peanut
          image: brandawg93/peanut:latest
          ports:
            - containerPort: 9000

          livenessProbe:
            httpGet:
              path: /api/ping
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/ping
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /api/ping
              port: 9000
            failureThreshold: 30
            periodSeconds: 10
            initialDelaySeconds: 15

          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          hostPath:
            path: /home/gabro/server/apps/peanut/config
            type: DirectoryOrCreate
